--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
      <meta name="author" content="Hilton Self Catering - Designed by Bexion Designs">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-     <link rel="stylesheet" href="css/bootstrap.min.css">
-     <link rel="stylesheet" href="css/font-awesome.min.css">
-     <link rel="stylesheet" href="css/aos.css">
+     <link rel="stylesheet" href="bootstrap.min.css">
+     <link rel="stylesheet" href="font-awesome.min.css">
+     <link rel="stylesheet" href="aos.css">
 
      <!-- MAIN CSS written by Rebecca Clements -->
-     <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="style.css">
 <!--
 By Rebecca Clements (20034038)
 www.bexiondesigns.co.uk
@@ -277,11 +277,11 @@ www.bexiondesigns.co.uk
     </div>
 
      <!-- SCRIPTS -->
-     <script src="js/jquery.min.js"></script>
-     <script src="js/bootstrap.min.js"></script>
-     <script src="js/aos.js"></script>
-     <script src="js/smoothscroll.js"></script>
-     <script src="js/custom.js"></script>
+     <script src="jquery.min.js"></script>
+     <script src="bootstrap.min.js"></script>
+     <script src="aos.js"></script>
+     <script src="smoothscroll.js"></script>
+     <script src="custom.js"></script>
 
 
      <!-- VANILLA SCRIPTS -->
