--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ www.bexiondesigns.co.uk
                 </ul>
 
                 <ul class="social-icon ml-lg-3">
-                    <li><a href="#" class="fa fa-facebook"></a></li>
-                    <li><a href="#" class="fa fa-twitter"></a></li>
-                    <li><a href="#" class="fa fa-instagram"></a></li>
+                    <li><a href="#" class="fa-facebook"></a></li>
+                    <li><a href="#" class="fa-twitter"></a></li>
+                    <li><a href="#" class="fa-instagram"></a></li>
                 </ul>
             </div>
 
